# OBS

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  OBS-All.sln  OBS.manifest  OBS.rc  OBS.sln  OBS.vcproj  OBS.vcxproj  OBS.vcxproj.filters  README.md  TODO  _config.yml  auth.html  cursor1.cur  development.html  editmode.html  gettingstarted.html  hotkeys.html  index.html  inos  mainwindow.html  preview.html  resource.h  scenes.html  shortcut.html  support.html  technical.html  whatcapture.html
CL/: cl.h
DShowPlugin/: CaptureFilter.cpp  CaptureFilter.h  DShowPlugin.cpp  DShowPlugin.h  DShowPlugin.rc  DShowPlugin.sln  DShowPlugin.vcproj  DShowPlugin.vcxproj  DShowPlugin.vcxproj.filters  DeviceAudio.cpp  DeviceSource.cpp  DeviceSource.h  IVideoCaptureFilter.h  ImageMadness.cpp  MediaInfoStuff.cpp  MediaInfoStuff.h  resource.h
GraphicsCapture/: GlobalCaptureStuff.h  GraphicsCapture.cpp  GraphicsCapture.h  GraphicsCapture.rc  GraphicsCapture.sln  GraphicsCapture.vcproj  GraphicsCapture.vcxproj  GraphicsCapture.vcxproj.filters  GraphicsCaptureSource.cpp  GraphicsCaptureSource.h  MemoryCapture.cpp  MemoryCapture.h  SharedTexCapture.cpp  SharedTexCapture.h  WindowCapture.cpp  WindowCapture.h  resource.h
NoiseGate/: NoiseGate.cpp  NoiseGate.h  NoiseGate.rc  NoiseGate.vcxproj  NoiseGate.vcxproj.filters  resource.h
OBSApi/: APIDefs.cpp  APIInterface.h  AudioFilter.h  AudioSource.cpp  AudioSource.h  ColorControl.cpp  ColorControl.h  GraphicsSystem.cpp  OBSApi.cpp  (+17 more)
lame/doc/html/: Makefile  Makefile.am  Makefile.in  detailed.html  history.html  links.html  usage.html
(+800 files in other folders)
